--- a/index.html
+++ b/index.html
@@ -5,25 +5,26 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Guess Value</title>
     <link rel="stylesheet" href="./style.css">
-    <script src="./script.js"></script>
 </head>
 <body>
     <div id="wrapper">
         <h1>Number guessing game</h1>
-        <p>Try and guess a number between 1 and 100.</p>
+        <p>Try and guess a random number between 1 and 100.</p>
         <p>You have 10 attempts to guess the number</p>
         <br>
         <form class="form">
             <label for="guessField" id="guess">Guess The Number</label>
-            <input type="text" id="guessField" class="guessField">
-            <input type="submit" id="submit" value="Submit" class="GuessSubmit">
+            <input type="text" id="guessField" >
+            <button id="submit">Submit</button>
             <div class="resultParas">
                 <p>Previous Guesses : <span class="preGuess"></span>
                 </p>
-                <p>Guesses Remaining : <span class="lastResult">10</span></p>
+                <p>Remaining Guesses : <span class="lastResult">10</span></p>
                 <p class="LoOrHi"></p>
             </div>
         </form>
     </div>
+    <script src="./script.js"></script>
+
 </body>
 </html>
